# SNAPRed

./: .copilot-mcp.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint  MANIFEST.in  README.md  codecov.yml  environment.yml  environment_nightly.yml  outdata_0.txt  outdata_1.txt  outdata_2.txt  outdata_3.txt  outdata_4.txt  outdata_5.txt  package-lock.json  package.json  pyproject.toml  setup.cfg  test_local_mantid_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: workitem.md
.github/workflows/: actions.yml  automerge.yml  cache_env.yml  docs.yaml  package.yaml  python-package-conda.yml  regenerate_lockfile.yml  unittest.yaml
.gitlab/issue_templates/: capability.md  defect.md  enabler.md  story.md  task.md
conda.recipe/: meta.yaml  meta.yml
conda.recipe/noarch/: snapred-0-py38.tar.bz2
docs/source/: api.rst  architecture.md  architecture_index.md  backend_services.md  conf.py  deploy.rst  extending.md  getting_started.rst  glossary.rst  index.rst  recipes_algorithms.md  ui_architecture.md  usage.rst
docs/source/api/: modules.rst  snapred.backend.api.rst  snapred.backend.dao.calibration.rst  snapred.backend.dao.ingredients.rst  snapred.backend.dao.normalization.rst  snapred.backend.dao.request.rst  snapred.backend.dao.response.rst  snapred.backend.dao.rst  snapred.backend.dao.state.CalibrantSample.rst  snapred.backend.dao.state.rst  snapred.backend.data.rst  snapred.backend.error.rst  snapred.backend.log.rst  snapred.backend.recipe.algorithm.rst  snapred.backend.recipe.rst  snapred.backend.rst  snapred.backend.service.rst  snapred.meta.decorators.rst  snapred.meta.mantid.rst  snapred.meta.rst  snapred.resources.rst  snapred.rst  snapred.ui.handler.rst  snapred.ui.model.rst  snapred.ui.presenter.rst  snapred.ui.rst  snapred.ui.threading.rst  snapred.ui.view.rst  snapred.ui.widget.rst  snapred.ui.workflow.rst
docs/source/developer/: codingStandards.rst  dataSources.rst  deploy.rst  implFlowchart.rst  implementationNotes.rst  index.rst  resources.rst  workflowDiagrams.rst
docs/source/developer/architecture/: frontend.rst  index.rst
docs/source/developer/implementation_notes/: grouping_workspaces.rst  index.rst  profiling_and_progress_recording.rst
docs/source/ui/handler/: SNAPResponseHandler.rst  SNAPResponseHanlder.rst
docs/source/ui/workflow/: WorkflowBuilder.rst
src/: SmoothDataExcludingPeaksAlgo.py  __init__.py  main.py
src/resources/: ascii.txt  dev.yml  style.qss
src/resources/expected_results/calibration/: DSP_57514_10deg.nxs  DSP_57514_All.nxs  DSP_57514_Bank.nxs  DSP_57514_Column.nxs
src/snapred/: SmoothDataExcludingPeaksAlgo.py  __init__.py  __main__.py  _version.py  main.py  mcp_main.py  mcp_server.py  scratch.py
src/snapred/backend/: shims.py
src/snapred/backend/api/: HookManager.py  InterfaceController.py  ProgressRecorder.py  PubSubManager.py  RequestScheduler.py
src/snapred/backend/dao/: CrystallographicInfo.py  CrystallographicPeak.py  (+33 more)
src/snapred/meta/: Callback.py  Config.py  Enum.py  InternalConstants.py  LockFile.py  Singleton.py  Time.py  pointer.py  redantic.py
src/snapred/resources/: SNAPLite_Definition.xml  SNAP_Definition.xml  application.yml  ascii.txt  dev.yml  input_crystalInfo.json  input_parameters.json  not_real.cif  snapred_next.yml  snapred_prod.yml  snapred_qa.yml  style.qss  test_id123.json  workbench_style.qss
src/snapred/ui/: main.py
tests/: conftest.py
tests/cis_tests/: GroupDiffCalRecipe_test_script.py  alternative_calibration_in_reduction_script.py  artificial_norm_script.py  bin_and_offset_mode.py  binningmode_script.py  calibrant_samples_script.py  cc-and-smooth.py  check_remove.py  create_SNAPInstPrm_add_new_PV.py  create_SNAPInstPrm_historical.py  detector_panel_straddle_check.py  detector_peak_script.py  diffcal_integration_test_script.py  diffcal_masking_script.py  diffcal_pixel_diffraction_background_subtraction_script.py  diffcal_script.py  effective_instrument_script.py  example_script.py  lazy_raw_vanadium.py  lazy_rebin_ragged.py  leftovers_script.py  listener_check.py  lite_data_creation.py  live_data_memory_leak.py  live_data_memory_leak_v2.py  live_data_pulse_times.py  masked_subgroups_script.py  new_diffcal_script.py  normalization_calibration_script.py  normalizebybeammonitor_proto.py  pixel_grouping_parameters_script.py  proto_lockfile.py  raw_vanadium_proto.py  rebin_ragged_operations.py  recreate_save_reduction_segfault.py  reduction_proto.py  reduction_recipe_script.py  reduction_with_cheese_hooks.py  reload_application.py  reorder_proto.py  (+5 more)
tests/integration/: test_controller.py  test_diffcal.py  test_normalization.py  test_reduction.py  test_versions_in_order.py  test_workflow_panels_happy_path.py
tests/resources/: application.yml  headcheck.yml  integration_test.yml  test.yml
tests/resources/inputs/: GroupingMap.json  ReductionParameters.json  SNAPInstPrm.json  SampleGroupingFile.json  test_pixelmask_555_groceryservice.h5
tests/resources/outputs/: APIServicePaths.json  APIServicePaths.json.new
tests/resources/ultralite/: CRACKLEFocGroup_Column.xml  CRACKLELiteDataMap.xml  CRACKLE_Definition.xml  create_ultralite_data.py
tests/unit/backend/: test_main.py  test_shim.py
tests/unit/main/: __init__.py  test_init.py
tests/unit/meta/: test_Callback.py  test_Config.py  test_Decorators.py  test_InternalConstants.py  test_LockFile.py  test_Time.py  test_config.py  test_lint_diff.py  test_pointer.py  test_redantic.py
tests/unit/ui/: test_InitializeCalibrationCheckView.py
tests/util/: Config_helpers.py  IPTS_override.py  InstaEats.py  Pydantic_util.py  SculleryBoy.py  ScullionBoy.py  TestSummary.py  WhateversInTheFridge.py  dao.py  diffraction_calibration_synthetic_data.py  golden_data.py  groupingMapUtil.py  h5py_helpers.py  helpers.py  instrument_helpers.py  kernel_helpers.py  mock_util.py  pytest_helpers.py  qt_mock_util.py  reduction_mask_helpers.py  script_as_test.py  state_helpers.py
tests/util_tests/: test_Config_helpers.py  test_IPTS_override.py  test_golden_data.py  test_script_as_test.py  test_state_helpers.py
(+871 files in other folders)
