[project]
name = "SNAPRed"
description = "A desktop application for Lifecycle Managment of data collected from the SNAP instrument."
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pyoncat ~= 1.6"
]
readme = "README.md"
license = { text = "GPL3.0" }


[project.urls]
homepage = "https://github.com/neutrons/SNAPRed"  # if no homepage, use repo url
repository = "https://github.com/neutrons/SNAPRed"
# documentation = add_url_to_readthedoc_here
issues = "https://github.com/neutrons/SNAPRed/issues"

[project.scripts]
snapred = "snapred.__main__:main"

[build-system]
requires = ["setuptools", "toml", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.ui", "*.txt","*.yml","*.yaml","*.qss"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/snapred/_version.py"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
markers = [
  "integration: mark a test as an integration test",
  "mount_snap: mark a test as using /SNS/SNAP/ data mount",
  "golden_data(*, path=None, short_name=None, date=None): mark golden data to use with a test",
  "datarepo: mark a test as using snapred-data repo",
  "ui: mark a test as a UI test",
]
# The following will be overridden by the commandline option "-m integration"
addopts = "-m 'not (integration or datarepo)'"


[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules/
select = ["A", "ARG", "BLE", "E", "F", "I", "PT", "TID251"]
ignore = ["F403", "F405", # wild imports and  unknown names
]
exclude = ["docs"]
extend-exclude = ["conftest.py"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mantid.simpleapi".msg = "In the SNAPRed backend, any calls to 'mantid.simpleapi' algorithms should be routed through 'MantidSnapper'."

[tool.ruff.lint.per-file-ignores]
# exceptions: ban import of `mantid.simpleapi` ("TID251"):
"tests/*" = ["TID251"]
"src/snapred/backend/recipe/algorithm*" = ["TID251"]
"src/snapred/backend/recipe/GenericRecipe.py" = ["TID251"]
"src/snapred/resources/ultralite*" = ["TID251"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
ignore_missing_imports = true # gets around mantid imports
exclude = [
"tests/",
"src/snapred/backend/",
"src/snapred/meta/",
"src/snapred/ui/"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
source = ["src/snapred"]
omit = [
        "*/tests/*",
        "conda.recipe/*",
        "docs/*",
        "src/snapred/__init__.py",
        "src/snapred/ui/*",
        "src/snapred/backend/dao/*",
        "src/snapred/_version.py",
  ]

[tool.coverage.report]
fail_under = 1
exclude_lines = [
  'if __name__ == "__main__":'
]

# ---------------- #
# Pixi Config      #
# ---------------- #
[tool.pixi.workspace]
preview = ["pixi-build"]
channels = [
  "conda-forge",
  "neutrons/label/rc",
  "mantid-ornl/label/rc",
  "mantid/label/main"
]
platforms = ["linux-64"]  # add additional platforms as needed

[tool.pixi.environments]
default = {features = ["test", "package", "docs", "developer"], solve-group = "default"}

[tool.pixi.pypi-dependencies]
snapred = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10"
pip = "*"
pydantic = ">=2.7.3,<3"
mantidworkbench = ">=6.12.0.2rc3"
mantid = ">=6.12.0.2rc2"
mslice = "*"
mantidqt = ">=6.12.0.2rc2"
qtpy = "*"
muparser = "=2.3.4"
pycifrw = "*"
pyqtwebengine = "*"
git-lfs = "*"

[tool.pixi.package]
name = "snapred"
version = "0.0.0"  # placeholder, overwritten by sync-version

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

# --------------- #
# Pixi Tasks      #
# --------------- #
[tool.pixi.tasks]
# PyPi packaging tasks
build-pypi = { cmd = "hatch build", description = "Build the package for PyPI" }
publish-pypi = { cmd = "twine upload dist/*", description = "Publish the package to PyPI", depends-on = ["build-pypi"] }
publish-pypi-test = { cmd = "twine upload --repository testpypi dist/*", description = "Publish the package to TestPyPI", depends-on = ["build-pypi"] }
clean-pypi = { cmd = "rm -rf dist", description = "Clean the PyPI build artifacts" }
build-conda-command = { cmd = "pixi build", description = "Build the conda package command" }
build-conda = { description = "Build the conda package", depends-on = ["sync-version", "build-conda-command", "reset-version"] }
publish-conda = { cmd = "anaconda upload *.conda", description = "Publish the .conda package to anaconda.org", depends-on = ["build-conda"] }
clean-conda = { cmd = "rm -f *.conda", description = "Clean the local .conda build artifacts" }
# Documentation tasks
build-docs = { cmd = "sphinx-build -b html docs docs/_build", description = "Build the documentation" }
clean-docs = { cmd = "rm -rf docs/_build", description = "Clean the documentation build artifacts" }
# Testing tasks
test = { cmd = "pytest", description = "Run the tests" }  # pytest config above takes care of the arguments
# MISC
clean-all = { description = "Clean all build artifacts", depends-on = ["clean-pypi", "clean-docs", "clean-conda"] }
sync-version = { cmd = "version=$(python -m versioningit); toml set tool.pixi.package.version \"$version\" --toml-path pyproject.toml", description = "Sync pyproject.toml version with Git version" }
reset-version = { cmd = "toml set tool.pixi.package.version \"0.0.0\" --toml-path pyproject.toml", description = "Reset the package version to 0.0.0" }

# ------------------------------- #
# Pixi Feature Dependencies       #
# ------------------------------- #
[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-qt = "*"
pytest-cov = "*"

[tool.pixi.feature.package.dependencies]
boa = "*"
anaconda-client = "*"
conda-build = "<24"
conda-verify = "*"
check-wheel-contents = ">=0.6.0"
twine = "*"
versioningit = "*"
hatch = "*"

[tool.pixi.feature.developer.dependencies]
pre-commit = "*"
ruff = "*"
python-build = "*"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "1.2.*"
sphinxcontrib-mermaid = "*"
types-pyyaml = "*"
erdantic = ">=1.0.3"
