[metadata]
name = SNAPRed
version = 0.0.1
description = A package for performing SNAPRed analysis.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/neutrons/SNAPRed

[options]
package_dir=
    =src
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    pydantic
    mantidworkbench
    qtpy

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    versioningit
tests = pytest

[options.entry_points]
console_scripts =
    snapred = snapred.main

[options.package_data]
* =
   *.ui
   *.txt
   *.yml
   *.yaml
   *.qss

[flake8]
max-line-length = 120
ignore = E203
exclude = conda.recipe/meta.yaml

[versioning]
source-version-file = snapred/_version.py
version-pattern = {tag}
commit-message-pattern = {raw}
tag-message-pattern = {raw}

[coverage:run]
source = src/snapred
omit =
        */tests/*
        src/snapred/__init__.py
        src/snapred/snapred/ui/*

[coverage:report]
fail_under = 60
exclude_lines =
  if __name__ == "__main__":
