[metadata]
name = SNAPRed
version = 0.0.1
description = A package for performing SNAPRed analysis.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/neutrons/SNAPRed

[options]
package_dir=
   =src
include_package_data = True
packages = find:
python_requires >= 3.10
install_requires =
    pydantic >=2.7.3,<3
    mantidworkbench
    qtpy
tests_require =
    flake8
    black
    mypy
    pytest
    mock

[options.entry_points]
console_scripts =
    snapred = snapred.__main__:main

[options.packages.find]
where =
    src
exclude =
    tests*

[options.package_data]
* =
   *.ui
   *.txt
   *.yml
   *.yaml
   *.qss

[options.extras_require]
dev =
    versioningit
tests = pytest

[flake8]
max-line-length = 120
ignore = E203
exclude = conda.recipe/meta.yml

[versioning]
source-version-file = snapred/_version.py
version-pattern = {tag}
commit-message-pattern = {raw}
tag-message-pattern = {raw}

[coverage:run]
source = src/snapred
omit =
        */tests/*
        conda.recipe/*
        docs/*
        src/snapred/__init__.py
        src/snapred/ui/*
        src/snapred/backend/dao/*
	src/snapred/_version.py

[coverage:report]
 # temp set low until project is more developed, default 60
fail_under = 1
exclude_lines =
  if __name__ == "__main__":
